--- a/src/main/resources-filtered/application.properties
+++ b/src/main/resources-filtered/application.properties
@@ -1,3 +1,5 @@
+server.port=8080
+
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 # JSON related
@@ -14,3 +16,10 @@ spring.datasource.password=@jdbc.password@
 
 spring.mvc.view.prefix=/WEB-INF/page/
 spring.mvc.view.suffix=.jsp
+
+# INTERNATIONALIZATION (MessageSourceAutoConfiguration)
+#spring.messages.basename=messages
+#spring.messages.encoding=UTF-8
+#spring.messages.cache-seconds=-1
+#spring.messages.fallback-to-system-locale=false
+#spring.mvc.locale=ko
